[Refactor] 내용 수정

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                       <div>[티맥스] 통계 플랫폼 : Jupyter notebook 상에서 동작하는 GUI 기반 통계,EDA 플랫폼</div>
                       <div>#Statistic #Visualization #Ipython #python package</div>
                       <div>
-                        <span class="badge bg-inprogress">In Progress</span>
-                        <span class="badge bg-grey">Python</span>
-                        <span class="badge bg-grey">Jupyter</span>
+                        <span class="badge bg-used">Python</span>
+                        <span class="badge bg-used">Jupyter</span>
+                        <span class="badge bg-used">Html</span>
+                        <span class="badge bg-used">Javascript</span>
+                        <span class="badge bg-used">Css</span>
                         <span class="badge bg-grey">Docker</span>
-                        <span class="badge bg-grey">Html</span>
-                        <span class="badge bg-grey">Javascript</span>
-                        <span class="badge bg-grey">Css</span>
+                        <span class="badge bg-grey">Kubernetes</span>
                       </div>
                     </td>
                     <td class="text-center">
@@ -160,13 +160,12 @@
                       <div>[티맥스] 시각화 대시보드 : 오픈소스 라이브러리를 이용한 시각화 대시보드</div>
                       <div>#HyperData #Plotly.js #Tabulator.js #SunEditor.js #InterAction.js</div>
                       <div>
-                        <span class="badge bg-inprogress">In Progress</span>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Mobx</span>
-                        <span class="badge bg-grey">TypeScript</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Plotly.js</span>
-                        <span class="badge bg-grey">Babel</span>
+                        <span class="badge bg-used">React</span>
+                        <span class="badge bg-used">TypeScript</span>
+                        <span class="badge bg-used">Mobx</span>
+                        <span class="badge bg-used">Babel</span>
+                        <span class="badge bg-used">Webpakc</span>
+                        <span class="badge bg-used">Plotly.js</span>
                       </div>
                     </td>
                     <td class="text-center">
@@ -188,13 +187,12 @@
                       </div>
                       <div>#통합모빌리티 #공유서비스 #대중교통 #가격 비교 #지도서비스 #스타트업 #Co-founder</div>
                       <div>
-                        <span class="badge bg-done">Done</span>
-                        <span class="badge bg-grey">Android</span>
-                        <span class="badge bg-grey">Java</span>
-                        <span class="badge bg-grey">REST API</span>
-                        <span class="badge bg-grey">GOOGLE MAP</span>
-                        <span class="badge bg-grey">SOCAIAL LOGIN</span>
-                        <span class="badge bg-grey">FIREBASE</span>
+                        <span class="badge bg-used">Android</span>
+                        <span class="badge bg-used">Java</span>
+                        <span class="badge bg-used">REST API</span>
+                        <span class="badge bg-used">GOOGLE MAP</span>
+                        <span class="badge bg-used">FIREBASE</span>
+                        <span class="badge bg-grey">Php</span>
                       </div>
                     </td>
                     <td class="text-center">
@@ -286,15 +284,15 @@
                       <div>금용공학 모델 + AI를 이용한 최적의 포트폴리오 생성, 추천 서비스</div>
                       <div>#FinTech #Toy #Finance #AI</div>
                       <div>
-                        <span class="badge bg-inprogress">In Progress</span>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">TypeScript</span>
-                        <span class="badge bg-grey">Material UI</span>
-                        <span class="badge bg-grey">Plotly.js</span>
-                        <span class="badge bg-grey">Flask</span>
+                        <span class="badge bg-used">React</span>
+                        <span class="badge bg-used">TypeScript</span>
+                        <span class="badge bg-used">Material UI</span>
+                        <span class="badge bg-used">Plotly.js</span>
+                        <span class="badge bg-used">Webpack</span>
+                        <span class="badge bg-used">Babel</span>
                         <span class="badge bg-grey">Python</span>
-                        <span class="badge bg-grey">Webpack</span>
-                        <span class="badge bg-grey">Babel</span>
+                        <span class="badge bg-grey">Flask</span>
+                        <span class="badge bg-grey">AWS</span>
                       </div>
                     </td>
                     <td class="text-center">
@@ -442,8 +440,9 @@
       <section class="container pt mt fade-class" id="awards">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Awards</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-          다양한 사람들과 협업을 통해서 함께 공동의 목표를 성취해 나가는 것에 관심이 많습니다. 실패를 겁내지 않고
-          도전하는 것이 행복합니다.
+          갑작스럽게 만들고 싶었던 서비스를 검증하기 위해, 또는 주어진 일에 열심히 몰두하고 있을때 선물같은 느낌으로
+          다가옵니다.
+          <br />그래서 상을 받는 건 저어겐 언제나 즐겁습니다.
         </div>
         <div class="card shadow">
           <div class="card-body">
@@ -451,7 +450,7 @@
               <table class="table table-hover align-middle">
                 <thead>
                   <tr class="fonsiz-sm fonwei-kr-md letsp-sm color-basic-opac text-center vertmid">
-                    <th>대회</th>
+                    <th>상장</th>
                     <th>세부 사항</th>
                     <th>수상</th>
                     <th>증빙자료</th>
@@ -465,6 +464,11 @@
                     </th>
                     <td>
                       <div>[티맥스]시각화 플랫폼, 통계 플랫폼 관련 업무로 인한 수상</div>
+                      <div>
+                        기존의 업무 외에 갑작스런 고객사의 요청으로 새로운 통계 플랫폼을 개발해야했습니다. <br />통계
+                        도메인 지식이 부족함에도 여러사람을 괴롭히고 저 자신을 괴롭힌 결과 좋은 플랫폼을 만들게
+                        되었습니다.
+                      </div>
                     </td>
                     <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">우수사원상<br /></td>
                     <td class="text-center">
@@ -499,7 +503,7 @@
                               />
                               <p class="modal-desc">
                                 짧은 기간 안에 기존 업무(시각화 대시보드)외, 프로젝트(통계분석플랫폼)를 성공적으로
-                                구현하여 수상하였습니다.<br />( 2/600명 )
+                                구현하여 수상하였습니다.
                               </p>
                             </div>
                             <div class="modal-footer">
@@ -520,14 +524,9 @@
                     <td>
                       <div>[Dr.폴리오] 금용공학 모델 + AI를 이용한 최적의 포트폴리오 생성, 추천 서비스</div>
                       <div>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">TypeScript</span>
-                        <span class="badge bg-grey">Material UI</span>
-                        <span class="badge bg-grey">Plotly.js</span>
-                        <span class="badge bg-grey">Flask</span>
-                        <span class="badge bg-grey">Python</span>
-                        <span class="badge bg-grey">Webpack</span>
-                        <span class="badge bg-grey">Babel</span>
+                        코로나 시기에 많은 사람들이 주식에 관심을 가지게 되었습니다. 하지만 내 주식 포트폴리오를
+                        확신하긴 어렵습니다. <br />
+                        그래서 최신 금융모델에 AI를 합하여 포트폴리오를 생성해주고 조언해주는 서비스를 개발해보았습니다.
                       </div>
                     </td>
                     <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">우수상<br /></td>
@@ -589,11 +588,9 @@
                     <td>
                       <div>[카찹] 통합 모빌리티 서비스</div>
                       <div>
-                        <span class="badge bg-grey">Android</span>
-                        <span class="badge bg-grey">Java</span>
-                        <span class="badge bg-grey">Kotlin</span>
-                        <span class="badge bg-grey">Firebase</span>
-                        <span class="badge bg-grey">Php</span>
+                        졸업 프로젝트를 진행하다가 창업으로 넘어가기 전에 사업 모델의 고도화 및 검증을 위해 여러 대회,
+                        공모전에 참가하고 피드백을 받았습니다. <br />
+                        생각보다 많은 응원과 격려를 받았으며 이때를 계기로 본격 창업의 길로 나아가게 되었습니다.
                       </div>
                     </td>
                     <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">
@@ -680,11 +677,8 @@
                     <td>
                       <div>[UC-Lab] GAN모델과 DNN모델을 활용한 Anomaly Detection에 관한 연구</div>
                       <div>
-                        <span class="badge bg-grey">Machine Learning</span>
-                        <span class="badge bg-grey">GAN</span>
-                        <span class="badge bg-grey">DNN</span>
-                        <span class="badge bg-grey">Notebook(ipynb)</span>
-                        <span class="badge bg-grey">Python</span>
+                        학부연구생과 인턴을 진행하면서 Anomaly Detection에 대한 나름의 깊은 공부를 했습니다. <br/>
+                        시간이 지나면 사라질 지식이었는데 지도교수님께서 이왕이면 논문으로 남기라는 조언을 해주셨고 해봤습니다.
                       </div>
                     </td>
                     <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">우수논문상</td>
