--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
-    <link rel="stylesheet" href="/css/theme-dark.css" media="(prefers-color-scheme: dark)" />
+    <link rel="stylesheet" href="/css/theme-dark.css" title="darkTheme" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/png/ico" />
     <script type="module" src="/js/component/menu/menuBar.js"></script>
     <script type="module" src="/js/component/section/introSection.js"></script>
     <script type="module" src="/js/component/section/projectSection.js"></script>
